--- a/src/styles/component_styles/BG-Square.css
+++ b/src/styles/component_styles/BG-Square.css
@@ -7,7 +7,7 @@
 
 .bg-square-bottom {
     display: flex;
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     z-index: 0;
@@ -25,7 +25,7 @@
 
     .bg-square-bottom {
         display: flex;
-        position: absolute;
+        position: fixed;
         right: 0;
         bottom: 0;
         z-index: 0;
