--- a/src/styles/component_styles/Home.css
+++ b/src/styles/component_styles/Home.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding: 20px;
+  padding-top: 50px;
   box-sizing: border-box;
   margin-top: 225px; /* Adjust this value to push content below the navbar */
 }
